fix: wcag aaa text color contrast (#1814)
* fix: wcag aaa text color contrast

* fix: add border to active items calendar hcw

--- a/src/button.scss
+++ b/src/button.scss
@@ -57,6 +57,7 @@ $block: #{$fd-namespace}-button;
   padding-left: $fd-button-padding-x;
   padding-right: $fd-button-padding-x;
   text-align: center;
+  text-shadow: var(--fdButton_Text_Shadow);
 
   // look
   border-style: solid;
